<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="30dp"
    android:background="@color/colorBackground"
    tools:context=".Register">

    <TextView
        android:text="MARVEL"
        android:textSize="50sp"
        android:textStyle="bold"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorBlack" />

    <TextView
        android:text="@string/registro"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nombre"
            android:hint="@string/nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorHint"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:hint="@string/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorHint"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:hint="@string/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorHint"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fecha_nacimiento"
            android:hint="@string/fecha_nacimiento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorHint"/>
    </com.google.android.material.textfield.TextInputLayout>


    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/colorAccent"/>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/enviar"
        android:textColor="@color/colorOnPrimary" />

    <TextView
        android:textStyle="bold"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/iniciar_sesi_n"
        android:id="@+id/loginNow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary" />

</LinearLayout>

